--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <header class="masthead d-flex align-items-center">
             <div class="container px-4 px-lg-5 text-center">
                 <h1 class="mb-1">Yusef Carr</h1>
-                <h3 class="mb-5"><em>Web Developer/Musician/Story-Teller</em></h3>
+                <h3 class="mb-5"><em>Web Developer/Story-Teller/Cinematographer</em></h3>
                 <a class="btn btn-primary btn-xl" href="#about">Learn More</a>
             </div>
         </header>
@@ -73,7 +73,7 @@
                     <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-screen-tablet"></i></span>
                         <h4><strong>Web Development</strong></h4>
-                        <p class="text-faded mb-0">Media Quieries</p>
+                        <p class="text-faded mb-0">Debugging</p>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="icon-camrecorder"></i></span>
@@ -86,7 +86,7 @@
         <!-- Callout-->
         <section class="callout ">
             
-  <video src="./assets/vid/Game Promo Video.mp4" autoplay loop playsinline muted></video>
+  <video src="./assets/vid/Untitled video - Made with Clipchamp.mp4" autoplay loop playsinline muted></video>
 
   <div class="header-text">
     <h2 class="mx-auto ">
@@ -176,7 +176,7 @@
         </section>
         <!-- Map-->
         <div class="map" id="contact">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3086.930857290499!2d-84.51137782404315!3d39.31249077163835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88404ed908c96e19%3A0x20764079295e9c16!2s6111%20Stonehill%20Dr%2C%20Fairfield%2C%20OH%2045014!5e0!3m2!1sen!2sus!4v1723139589154!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12362.445434486492!2d-84.3758822!3d39.2289915!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8840536f0dec042f%3A0x54c665d266579f3e!2sKable%20Academy!5e0!3m2!1sen!2sus!4v1723749874495!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></iframe>
             <br />
             <small><a href="https://maps.app.goo.gl/LiioTcrhwL6tLSVC7"></a></small>
         </div>
@@ -185,10 +185,10 @@
             <div class="container px-4 px-lg-5">
                 <ul class="list-inline mb-5">
                     <li class="list-inline-item">
-                        <a class="social-link rounded-circle text-white mr-3" href="https://www.facebook.com/yusef.carr/" target="_blank"><i class="icon-social-facebook"></i></a>
+                        <a class="social-link rounded-circle text-white mr-3" href="https://www.linkedin.com/in/yusef-carr-2470a231b" target="_blank"><i class="icon-social-linkedin"></i></a>
                     </li>
                     <li class="list-inline-item">
-                        <a class="social-link rounded-circle text-white mr-3" href="https://x.com/Ayo_Sef" target="_blank"><i class="icon-social-twitter"></i></a>
+                        <a class="social-link rounded-circle text-white mr-3" href="mailto:ycarr99@gmail.com" target="_blank"><i class="icon-envelope"></i></a>
                     </li>
                     <li class="list-inline-item">
                         <a class="social-link rounded-circle text-white" href="https://github.com/yusefcarr" target="_blank"><i class="icon-social-github"></i></a>
