--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                                     <p class="mb-0">The first webpage I ever created</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="./assets/img/Me (1).png" alt="..." />
+                            <img class="img-fluid" src="./assets/img/IMG_3989.jpg" alt="..." />
                         </a>
                     </div>
                     <div class="col-lg-6">
@@ -149,7 +149,7 @@
                                     <p class="mb-0">A product landing page I made for a camera co.</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="assets/img/Retro camera.jpg" alt="..." />
+                            <img class="img-fluid" src="https://images.unsplash.com/photo-1610664934028-b0d1fc08608e?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="..." />
                         </a>
                     </div>
                     <div class="col-lg-6">
